test/kobra-code/syntax-errors/missing-end.ks
$ a = 10

while (a < 10):
    say(a)
    a++